# fruit_dealer_game

./: .gitignore  Taskfile.yml  pre-commit-config.yaml  pyproject.toml
.github/workflows/: test.yml
src/: cli.py  commands.py  game_engine.py  game_setup.py  main.py  models.py  persistence.py
src/systems/: __init__.py  pricing.py
src/ui/: __init__.py  rendering.py
tests/: conftest.py  test_cli.py  test_commands.py  test_game_engine.py  test_game_setup.py  test_main.py  test_persistence.py  test_pricing.py  test_ui.py
