[project]
name = "fruit-dealer-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "go-task-bin>=3.46.3",
    "loguru>=0.7.3",
    "pygame>=2.6.1",
    "pytest>=9.0.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.15.1",
    "rich>=14.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]  # ← Add this!

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
]
